--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -3,5 +3,8 @@
 		<div class="post-content">
 			<h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
 		</div>
+		<div class="postPage">
+		<a href="{{pathFor ''}}">Discuss</a>
+		</div>
 	</div>
 </template>
