--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -3,8 +3,7 @@
 		<div class="form-group">
 			<label class="control-label" for="url">URL</label>
 			<div class="controls">
-				<input name="url" id="url" type="text" value="" placeholder="Your URL
-				" class="form-control"/>
+				<input name="url" id="url" type="text" value="" placeholder="Your URL" class="form-control"/>
 			</div>
 		</div>
 		<div class="form-group">
