--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -163,11 +163,18 @@
 				pointer-events: none;
 			}
 			.alert {
-				animation: fadeOut 2700ms ease-in 0s 1 forwards;-webkit-animation: fadeOut 2700ms ease-in 0s 1 forwards;
+				animation: fadeOut 2700ms ease-in 0s 1 forwards;
+				-webkit-animation: fadeOut 2700ms ease-in 0s 1 forwards;
 				-moz-animation: fadeOut 2700ms ease-in 0s 1 forwards;
 				width: 250px;
 				float: right;
 				clear: both;
 				margin-bottom: 5px;
 				pointer-events: auto;
+			}
+			@keyframes fadeOut {
+				0% {opacity: 0;}
+				10% {opacity: 1;}
+				90% {opacity: 1;}
+				100% {opacity: 0;}
 			}
